fix table spacing

--- a/src/components/ComponentStatus/component-status.scss
+++ b/src/components/ComponentStatus/component-status.scss
@@ -3,7 +3,7 @@
 }
 
 .component-status .page-table td {
-  padding: $spacing-sm 0;
+  padding: $spacing-sm $spacing-md;
 }
 
 .component-status__key {
